# FreeCAD_sf_master

./: .gitignore  CMakeLists.txt
src/Mod/: CMakeLists.txt
src/Mod/Aircraft/: Aircraft.dox  AircraftGui.py  CMakeLists.txt  Init.py  InitGui.py  naca.pyf  nacaInit.py  nacawrap.py
src/Mod/Aircraft/App/: AppAircraft.cpp  AppAircraftPy.cpp  CMakeLists.txt  PreCompiled.h
src/Mod/Aircraft/Gui/: AppAircraftGui.cpp  AppAircraftGuiPy.cpp  CMakeLists.txt  Command.cpp  PreCompiled.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
src/Mod/Aircraft/Gui/Resources/: Aircraft.qrc
src/Mod/Aircraft/NACAairfoil/: TaskPanel.ui  __Init__.py
src/Mod/Aircraft/Resources/: Aircraft.qrc
